<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="markaction">To name this action\nlong press this button.</string>
    <string name="clicktochange">Click to change action name</string>
    <string name="log_event_label">Filename</string>
    <string name="log_event_filename">activehabits.txt</string>
    <string name="log_event_summary">filename to store marked actions</string>
    <string name="app_name">ActiveHabits</string>
    <string name="mark">Mark</string>
    <string name="chart">Chart All</string>
    <string name="social">Social</string>
    <string name="prefs">Preferences</string>
    <string name="help">Help</string>
    <string name="about">About</string>
    <string name="close">Close</string>
    <string name="copyrecent">Copy Recent</string>
    <string name="renameaction">Rename</string>
    <string name="unmark">Unmark</string>
    <string name="history">History</string>
    <string name="remove">Remove</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="actionname">Button name:</string>
    <string name="addaction">New Button</string>
    <string name="contextremoveaction">Delete</string>
    <string name="clearsplashed">Restore Splash Page</string>
    <string name="splash">About ActiveHabits</string>
    <string name="renametitle">Rename Button</string>
    <string name="colortitle">Color Button</string>
    <string name="renameprompt">Enter the new name:</string>
<!--     <string name="removetitle">Remove Action</string>  -->
    <string name="removeprompt">Are you sure you want to remove this button?</string>
    <string name="description">\n\n\n\n    Marking any button/action repeatedly can form a habit.\n\n    The software that became ActiveHabits was originally used to mark \'wake up\' &amp; \'go to bed\' buttons/actions, a sleep habit.\n\n    We hope to someday hear how you use ActiveHabits.\n\nThis activity was carefully crafted by http://activehabits.com\n</string>
    <string name="help01">\n\n\n\nGetting Started: Rename the default button/action.  Click the button to mark/record the date &amp; location when marked.\n\n    Data is stored as ActiveHabits.txt on your SD card.\n</string>
    <string name="playlist">Playlist</string>
    <string name="playlistchange">Playlist...</string>
    <string name="playlistprompt">Choose a playlist for this button</string>
    <string name="playlistclear"> - no playlist - </string>
    <string name="contextmoveup">Move Up</string>
    <string name="contextmovedown">Move Down</string>
    <string name="editsubmenu">Edit ...</string>
    <string name="editaction">Edit Button</string>
    <string name="setmenu">Set ...</string>
    <string name="setmenutitle">Select Set</string>
    <string name="setdescription">Select a set of actions to load from a file.</string>
    <string name="setadd">Add Set ...</string>
    <string name="setclear">Clear All ...</string>
</resources>
