<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item android:id="@+id/optionmark"
          android:title="@string/mark" />
    <item android:id="@+id/optionaddaction"
          android:title="@string/addaction" />
    <item android:id="@+id/optionchart"
          android:title="@string/chart" />
<!--<item android:id="@+id/optionsetmenu"
          android:title="@string/setmenu" />
    <item android:id="@+id/social"
          android:title="@string/social" />
    <item android:id="@+id/prefs"
          android:title="@string/prefs" /> -->
    <item android:id="@+id/optionhelp"
          android:title="@string/help" />
    <item android:id="@+id/optionabout"
          android:title="@string/about" />
<!-- <item android:id="@+id/quit"
          android:title="@string/close" /> -->
</menu>
